--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout master
-        uses: actions/core
+        uses: actions/checkout@v2
       - name: Add environment variables to .env.prod
         run: |
           mkdir .envs
           echo DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }} >> .envs/.env.prod
           echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .envs/.env.prod
           echo DJANGO_ALLOWED_HOSTS=${{ secrets.DJANGO_ALLOWED_HOSTS }} >> .envs/.env.prod
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       - name: Set environment variables
         run: |
           echo ::set-env name=BACKEND_IMAGE::${{ env.BACKEND_IMAGE }}
