--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,7 @@ jobs:
           uses: actions/checkout@v2
         - name: Add environment variables to .env
           run: |
+            mkdir .envs
             echo DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }} >> .envs/.env.prod
             echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .envs/.env.prod
             echo DJANGO_ALLOWED_HOSTS=${{ secrets.DJANGO_ALLOWED_HOSTS }} >> .envs/.env.prod
