--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
             mkdir -p ~/.ssh
             ssh-agent -a $SSH_AUTH_SOCK > /dev/null
             ssh-keyscan github.com >> ~/.ssh/known_hosts
-            ssh-add - <<< "${{ secrets.SSH_KEY }}"
+            ssh-add - <<< "${{ secrets.PRIVATE_KEY }}"
         - name: Build and deploy images on DigitalOcean
           env:
             SSH_AUTH_SOCK: /tmp/ssh_agent.sock
@@ -80,4 +80,3 @@ jobs:
               docker-compose -f docker-compose.prod.yml up -d
             ENDSSH
 
-            
