--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,8 @@ jobs:
               cd ./app
               source .env.prod
               docker login docker.pkg.github.com -u behumb -p "${{ secrets.PACKAGE_TOKEN }}"
+              ls
+              pwd
               docker pull $WEB_IMAGE
               docker pull $NGINX_IMAGE
               docker-compose -f docker-compose.prod.yml up -d
