--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Add environment variables to .env.prod
         run: |
           mkdir .envs
-          echo DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }} >> .envs/.env.prod
+          echo DJANGO_SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" >> .envs/.env.prod
           echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .envs/.env.prod
           echo DJANGO_ALLOWED_HOSTS=${{ secrets.DJANGO_ALLOWED_HOSTS }} >> .envs/.env.prod
       - name: Set environment variables
@@ -55,7 +55,7 @@ jobs:
             mkdir .envs
             echo DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }} >> .envs/.env.prod
             echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .envs/.env.prod
-            echo DJANGO_ALLOWED_HOSTS=${{ secrets.DJANGO_ALLOWED_HOSTS }} >> .envs/.env.prod
+            echo DJANGO_ALLOWED_HOSTS="${{ secrets.DJANGO_ALLOWED_HOSTS }}" >> .envs/.env.prod
             echo WEB_IMAGE=${{ env.WEB_IMAGE }} >> .envs/.env.prod
             echo NGINX_IMAGE=${{ env.NGINX_IMAGE }} >> .envs/.env.prod
         - name: Add the private SSH key to the ssh-agent
