--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,4 +82,4 @@ jobs:
               docker pull ${{ env.WEB_IMAGE }}
               docker pull ${{ env.NGINX_IMAGE }}
               docker-compose -f docker-compose.prod.yml up -d
-            ENDSSHs
+            ENDSSH
