--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on: [push]
 env:
   BACKEND_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/backend
   NGINX_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/nginx
+  FRONTEND_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/nginx
 
 jobs:
 
@@ -24,16 +25,18 @@ jobs:
         run: |
           echo ::set-env name=BACKEND_IMAGE::${{ env.BACKEND_IMAGE }}
           echo ::set-env name=NGINX_IMAGE::${{ env.NGINX_IMAGE }}
+          echo ::set-env name=FRONTEND_IMAGE::${{ env.FRONTEND_IMAGE }}
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       - name: Log in to GitHub Packages
         run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
       - name: Pull images
         run: |
           docker pull ${{ env.BACKEND_IMAGE }} || true
           docker pull ${{ env.NGINX_IMAGE }} || true
+          docker pull ${{ env.FRONTEND_IMAGE }} || true
       - name: Build images
         run: |
           docker-compose -f docker-compose.ci.yml build
@@ -41,6 +44,7 @@ jobs:
         run: |
           docker push ${{ env.BACKEND_IMAGE }}
           docker push ${{ env.NGINX_IMAGE }}
+          docker push ${{ env.FRONTEND_IMAGE }}
 
   deploy:
       name: Deploy to DigitalOcean
