--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,9 @@ jobs:
               docker login docker.pkg.github.com -u behumb -p "${{ secrets.PACKAGE_TOKEN }}"
               ls
               pwd
+              echo ----------------------
               echo ${{ env.WEB_IMAGE }}
+              echo ----------------------
               docker pull ${{ env.WEB_IMAGE }}
               docker pull ${{ env.NGINX_IMAGE }}
               docker-compose -f docker-compose.prod.yml up -d
