--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,13 +79,16 @@ jobs:
               cd ./app
               source .env.prod
               docker login docker.pkg.github.com -u behumb -p "${{ secrets.PACKAGE_TOKEN }}"
-              ls
+              ls -a
               pwd
               echo ----------------------
               echo ${{ env.BACKEND_IMAGE }}
+              echo ${{ env.NGINX_IMAGE }}
+              echo ${{ env.FRONTEND_IMAGE }}
               echo ----------------------
 
               docker pull ${{ env.BACKEND_IMAGE }}
               docker pull ${{ env.NGINX_IMAGE }}
+              docker pull ${{ env.FRONTEND_IMAGE }}
               docker-compose -f docker-compose.prod.yml up -d
             ENDSSH
