--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
               docker pull ${{ env.NGINX_IMAGE }}
               docker pull ${{ env.FRONTEND_IMAGE }}
               echo ----------------------
-              ls -a elearing_app/
+              ls -a elearning_app/
               ls -a nginx/
               ls -a frontend/
               echo ---------------------- 
