--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,7 @@ version: "3.3"
 
 services: 
     backend:
+        image: "${BACKEND_IMAGE}"
         tty: true
         build: 
             context: elearning_app/
@@ -25,6 +26,7 @@ services:
             - POSTGRES_PASSWORD=elearningapp
             - POSTGRES_DB=django_db
     nginx:
+        image: "${NGINX_IMAGE}"
         build: ./nginx
         ports: 
             - 80:80
@@ -35,6 +37,7 @@ services:
             - static_volume:/usr/src/app/backend/static
             - media_volume:/usr/src/app/backend/media
     frontend:
+        image: "${FRONTEND_IMAGE}"
         build: 
             context: frontend/
             dockerfile: ./Dockerfile
