--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -32,6 +32,7 @@ services:
             - static_volume:/usr/src/app/backend/static
             - media_volume:/usr/src/app/backend/media
     frontend:
+        image: "${FRONTEND_IMAGE}"
         build: 
             context: frontend/
             dockerfile: ./Dockerfile
