--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
             echo DJANGO_SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" >> .envs/.env.prod
             echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .envs/.env.prod
             echo DJANGO_ALLOWED_HOSTS="${{ secrets.DJANGO_ALLOWED_HOSTS }}" >> .envs/.env.prod
-            echo WEB_IMAGE=${{ env.WEB_IMAGE }} >> .envs/.env.prod
+            echo BACKEND_IMAGE=${{ env.BACKEND_IMAGE }} >> .envs/.env.prod
             echo NGINX_IMAGE=${{ env.NGINX_IMAGE }} >> .envs/.env.prod
         - name: Add the private SSH key to the ssh-agent
           env:
