--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,23 +80,8 @@ jobs:
               cd ./app
               source .envs/.env.prod
               docker login docker.pkg.github.com -u behumb -p "${{ secrets.PACKAGE_TOKEN }}"
-              ls -a
-              pwd
-              echo ----------------------
-              echo ${{ env.BACKEND_IMAGE }}
-              echo ${{ env.NGINX_IMAGE }}
-              echo ${{ env.FRONTEND_IMAGE }}
-              echo ----------------------
-
-              docker pull ${{ env.BACKEND_IMAGE }}
-              docker pull ${{ env.NGINX_IMAGE }}
-              docker pull ${{ env.FRONTEND_IMAGE }}
-              echo ----------------------
-              ls -a
-              ls -a elearning_app/
-              ls -a nginx/
-              ls -a frontend/
-              echo ---------------------- 
-
+              docker pull $BACKEND_IMAGE
+              docker pull $NGINX_IMAGE
+              docker pull $FRONTEND_IMAGE
               docker-compose -f docker-compose.prod.yml up -d
             ENDSSH
