--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
           echo DJANGO_ALLOWED_HOSTS=${{ secrets.DJANGO_ALLOWED_HOSTS }} >> .envs/.env.prod
       - name: Set environment variables
         run: |
-          echo ::set-env name=BACKEND_IMAGE::${{ env.BACKEND_IMAGE }}
-          echo ::set-env name=NGINX_IMAGE::${{ env.NGINX_IMAGE }}
-          echo ::set-env name=FRONTEND_IMAGE::${{ env.FRONTEND_IMAGE }}
+          echo "BACKEND_IMAGE=${{ env.BACKEND_IMAGE }}" >> $GITHUB_ENV
+          echo "NGINX_IMAGE=${{ env.NGINX_IMAGE }}" >> $GITHUB_ENV
+          echo "FRONTEND_IMAGE=${{ env.FRONTEND_IMAGE }}" >> $GITHUB_ENV
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       - name: Log in to GitHub Packages
@@ -84,4 +84,3 @@ jobs:
               docker pull $FRONTEND_IMAGE
               docker-compose -f docker-compose.prod.yml up -d
             ENDSSH
-            
