--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,11 +77,10 @@ jobs:
             scp  -o StrictHostKeyChecking=no -r .envs/ ./docker-compose.prod.yml root@${{ secrets.DIGITAL_OCEAN_IP_ADDRESS }}:./app
             ssh -o StrictHostKeyChecking=no root@${{ secrets.DIGITAL_OCEAN_IP_ADDRESS }} << 'ENDSSH'
               cd ./app
-              source .envs/.env.prod
+              set -o allexport source set +o allexport .envs/.env.prod 
               docker login docker.pkg.github.com -u behumb -p "${{ secrets.PACKAGE_TOKEN }}"
               docker pull $BACKEND_IMAGE
               docker pull $NGINX_IMAGE
               docker pull $FRONTEND_IMAGE
               docker-compose -f docker-compose.prod.yml up -d
             ENDSSH
-            
