--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,7 @@ upstream frontend {
 
 
 server {
+    server_name 167.99.116.100;
     listen 80;
     location /static/ {
         alias /usr/src/app/backend/static/;
