--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,6 +6,7 @@ services:
         tty: true
         build: 
             context: elearning_app/
+            dockerfile: ./Dockerfile
         command: sh /usr/src/app/backend/start.sh
         expose:
             - 8000
