--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,6 +15,8 @@ services:
         volumes:
             - static_volume:/usr/src/app/backend/static
             - media_volume:/usr/src/app/backend/media
+        env_file:
+            - .envs/.env.prod
         
     db:
         image: postgres:alpine
