--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,34 @@ services:
             dockerfile: ./Dockerfile
         depends_on: 
             - backend
+        ports:
+            - 8080:8080
         volumes: 
             - frontend:/urs/src/app/frontend/
         command: npm run serve
+    rabbitmq:
+        image: rabbitmq:3-management-alpine
+        ports:
+            - 5672:5672
+            - 15672:15672
+        volumes:
+            - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+            - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+        depends_on: 
+            - frontend
+    celery:
+        build: elearning_app
+        command: celery -A elearning_app worker --loglevel=INFO -B
+        volumes:
+            - ./elearning_app:/usr/src/app/backend/
+        links:
+            - rabbitmq
+        depends_on:
+            - rabbitmq
+        env_file:
+            - .envs/.env.dev
+
+
 volumes: 
     postgres_data:
     frontend:
